testWeb/rt.tf
resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.main.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  tags {
    Name = "public route table"
  }
}

resource "aws_route_table_association" "public_assciation" {
  route_table_id = "${aws_route_table.public.id}"
  subnet_id = "${aws_subnet.subnet.id}"
}
